--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Default ignored files
 /shelf/
-/.idea/workspace.xml
+/src/gitignore/.idea/workspace.xml
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
-/.idea/
+/src/gitignore/.idea/
 /src/resources
+/src/gitignore/target
